added Jest to my keySkills

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "cSpell.words": ["clsx"],
+  "cSpell.words": [
+    "Ashouri",
+    "clsx"
+  ],
   "files.eol": "\n",
   "files.exclude": {
     "**/.git": true,
